--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,7 @@
  
 </head>
 <body>
+<h1>Life is too short to be playing sudoku</h1>
 <div id="sudoku">
 
 	<!-----one div for each row---->
@@ -25,7 +26,7 @@
 						<div class="cell">
 						 
 						 <!---every cell will have an input field --->
-						 <input type="text">
+						 <input type="text" maxlength="1" autocomplete="off">
 						 </div>
 						 <% end %>
 						</div>
