--- a/views/index.erb
+++ b/views/index.erb
@@ -7,38 +7,33 @@
  
 </head>
 <body>
-<h1>U * k * o * d * U * s</h1>
-<div id="sudoku">
+	<h1>U * k * o * d * U * s</h1> 
+<div id="flash">
+  <%= flash[:notice] %>
+</div>
+	<div id="sudoku">
+		<form action="/" method="post">	
+		<!--one div for each row -->
+		<% 3.times do |row| %>
+			<div class="row">hackpad
+				<% 3.times do |box| %>
+					<div class="box">
+						<!---each box will have nine cells-->
+						<% 3.times do |cell_row| %>
+							<div class="cell-row">
+								<% 3.times do |cell| %>
+								<%= partial :cell, :locals=>{:cell_index => row*27+box*3+cell_row*9+cell} %> }
+								<% end %>
+							</div>
+						<% end %>
+					</div>
+				<% end %>	
+			</div>
+		<% end %>
 
-	<!--one div for each row -->
-	
-	<% 3.times do |row| %>
-		<div class="row">
-		
-			<% 3.times do |box| %>
-				<div class="box">
-
-			
-			<!---each box will have nine cells-->
-				<% 3.times do |cell_row| %>
-					<div class="cell-row">
-
-					<% 3.times do |cell| %>
-						<div class="cell">
-
-						 <!---every cell will have an input field -->
-						<% cell_index = row * 27 + box * 9 + cell_row * 3 + cell %>
-						<% cell_value = @current_solution[cell_index] %>
-						<input type="text" maxlength="1" autocomplete="off" value="<%= cell_value %>" >
-						 </div>
-						 <% end %>
-						</div>
-					<% end %>
-				</div>
-			<% end %>
-		</div>
-	<% end %>	
-	
+      <!-- all boxes, rows and cells -->
+      <button>Check solution</button>
+    </form>
 </div>
 
 
